<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cloure</string>
    <string name="hello_world">Hola mundo!</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="country_prompt">Elija un tipo de producto</string>
    <string name="prompt_email">Dirección de correo</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">La dirección de correo no es válida</string>
    <string name="error_invalid_password">La clave es muy corta</string>
    <string name="error_incorrect_password">La clave es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">Es necesario dar permisos para leer contactos</string>
    <string name="navigation_drawer_open">Abrir el menu</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="nav_header_title">f</string>
    <string name="nav_header_subtitle">f</string>
    <string name="nav_header_desc">Cabecera del menu</string>
    <string name="action_settings">Configuración</string>
    <string name="hello_blank_fragment">Hola</string>
    <string name="title_activity_product_services_add">Agregar producto/servicio</string>
    <string name="title">Título</string>
    <string name="add">Agregar</string>
    <string name="description">Descripción</string>
    <string name="bar_code">Código de barras</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="user_image">Foto del usuario</string>
    <string name="postal_address">Dirección</string>
    <string name="phone">Teléfono</string>
    <string name="email">Dirección de correo</string>
    <string name="register">Registrarse</string>
    <string name="remember_me">Recuerdame</string>
    <string name="business_name">Empresa/Negocio</string>
    <string name="repeat_password">Repetir clave</string>
    <string name="business_type">Tipo de negocio/Actividad</string>
    <string name="cloure_url">Tu página web de cloure</string>
    <string name="accept_terms">Al registrarte estás aceptando nuestros <a href="http://cloure.com/terms/">términos y condiciones</a> y nuestra <a href="http://cloure.com/privacy/">política de privacidad</a>.</string>
    <string name="balance">Saldo</string>
    <string name="delete">Borrar</string>
    <string name="edit">Editar</string>
    <string name="add_payment">Agregar pago</string>
    <string name="confirm_delete">¿Está seguro que desea eliminar este registro?</string>
    <string name="yes">Si</string>
    <string name="confirm">Confirmar</string>
    <string name="customer">Cliente</string>
    <string name="date">Fecha</string>
    <string name="users">Usuarios</string>
    <string name="turns">Turnos</string>
    <string name="edit_user">Editar usuario</string>
    <string name="add_user">Agregar usuario</string>
    <string name="equipment_type_name">Nombre del tipo de equipo</string>
    <string name="equipments_types">Tipo de equipos</string>
    <string name="time">Hora</string>
    <string name="issue_description">Inconveniente</string>
    <string name="no_registers_found">No se encontraron registros</string>
    <string name="action_add">Agregar</string>
    <string name="add_expense">Agregar gasto</string>
    <string name="finances">Finanzas</string>
    <string name="messages">Mensajes</string>
    <string name="add_company_branch">Agregar sucursal</string>
    <string name="company_branches">Sucursales</string>
    <string name="bands_and_artists">Bandas y Artistas</string>
    <string name="record_successfully_deleted">Registro borrado satisfactoriamente</string>
    <string name="amount">Importe</string>
    <string name="user">Usuario</string>
    <string name="subject">Asunto</string>
    <string name="place">Lugar</string>
    <string name="band_artist">Banda/Artista</string>
    <string name="photographers">Fotográfos</string>
    <string name="places">Lugares</string>
    <string name="api_response_empty_value">La API ha respondido con una cadena vacía</string>
    <string name="group_item">Item</string>
    <string name="search">Search</string>
    <string name="full_name">Nombre completo</string>
    <string name="the_user_is_in_list">El usuario ya se encuentra en la lista</string>
    <string name="products_and_services">Productos y servicios</string>
    <string name="category_n1">Categoría de nivel 1</string>
    <string name="category_n2">Categoría de nivel 1</string>
    <string name="iva">IVA</string>
    <string name="cost_price">Precio de costo</string>
    <string name="sell_price">Precio de venta</string>
    <string name="without_vat">Sin IVA</string>
    <string name="with_vat">Con IVA</string>
    <string name="operation">Operación</string>
    <string name="payment_method">Forma de pago</string>
    <string name="successful_operation">Operación realizada con éxito</string>
    <string name="transports">Transportes</string>
    <string name="user_group">Grupo de usuario</string>
    <string name="back_to_exit">Presione volver otra vez si desea salir</string>
    <string name="users_groups">Grupos de usuarios</string>
    <string name="cannot_edit_system_group">No puedes editar grupos de sistema</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="path_password_strike_through">String</string>
</resources>