<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/shows_events_adapter_txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@+id/shows_events_adapter_txt_band_artists"
        app:layout_constraintEnd_toStartOf="@+id/shows_events_adapter_txt_band_artists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shows_events_adapter_txt_band_artists" />

    <TextView
        android:id="@+id/shows_events_adapter_txt_band_artists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/band_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shows_events_adapter_txt_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shows_events_adapter_txt_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:text="@string/place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/shows_events_adapter_txt_band_artists" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/shows_events_adapter_txt_place"
        app:layout_constraintEnd_toStartOf="@+id/shows_events_adapter_txt_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shows_events_adapter_txt_place"
        app:srcCompat="@drawable/ic_location_on_black_24dp" />

    <LinearLayout
        android:id="@+id/shows_events_photographers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shows_events_adapter_txt_place"></LinearLayout>

</android.support.constraint.ConstraintLayout>